--- a/petmily2.0/src/main/webapp/resources/css/style.css
+++ b/petmily2.0/src/main/webapp/resources/css/style.css
@@ -8017,7 +8017,7 @@ body.landing-page {
   background: url('../img/header_one.jpg') 50% 0 no-repeat;
 }
 .landing-page .header-back.two {
-  background: url('../img/header_two.jpg') 50% 0 no-repeat;
+  background: url('../img/header_three.jpg') 50% 0 no-repeat;
 }
 .landing-page .carousel {
   height: 470px;
